--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -134,8 +134,9 @@ task runBigDataSparkToH2OConversionBenchmarks(dependsOn: [shadowJar, substituteT
             environment("aws_access_key", accessKey)
             environment("aws_secret_key", secretKey)
             environment("aws_ssh_public_key", publicKey)
-            environment("datasets", "bigDatasets.json")
+            environment("datasets", "bigDatasetsTest.json")
             environment("other_arguments", "-b DataFrameToH2OFrameConversionBenchmark")
+            environment("timeout", "36000") // 10 hours
 
             commandLine "./run_benchmarks.sh"
         }
@@ -152,8 +153,9 @@ task runBigDataH2OtoSparkConversionBenchmarks(dependsOn: [shadowJar, substituteT
             environment("aws_access_key", accessKey)
             environment("aws_secret_key", secretKey)
             environment("aws_ssh_public_key", publicKey)
-            environment("datasets", "bigDatasets.json")
+            environment("datasets", "bigDatasetsTest.json")
             environment("other_arguments", "-b H2OFrameToDataFrameConversionBenchmark")
+            environment("timeout", "36000") // 10 hours
 
             commandLine "./run_benchmarks.sh"
         }
