--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -136,7 +136,7 @@ task runBigDataSparkToH2OConversionBenchmarks(dependsOn: [shadowJar, substituteT
             environment("aws_ssh_public_key", publicKey)
             environment("aws_instance_type", "m5.4xlarge")
             environment("aws_core_instance_count", "2")
-            environment("datasets", "bigDatasetsTest.json")
+            environment("datasets", "bigDatasets.json")
             environment("other_arguments", "-b DataFrameToH2OFrameConversionBenchmark")
             environment("aws_emr_timeout", "11 hours") // Must be greater then timeout for proper cleanup
             environment("timeout", "36000") // 10 hours
@@ -160,7 +160,7 @@ task runBigDataH2OtoSparkConversionBenchmarks(dependsOn: [shadowJar, substituteT
             environment("aws_ssh_public_key", publicKey)
             environment("aws_instance_type", "m5.4xlarge")
             environment("aws_core_instance_count", "2")
-            environment("datasets", "bigDatasetsTest.json")
+            environment("datasets", "bigDatasets.json")
             environment("other_arguments", "-b H2OFrameToDataFrameConversionBenchmark")
             environment("aws_emr_timeout", "11 hours") // Must be greater then timeout for proper cleanup
             environment("timeout", "36000") // 10 hours
