[SW-1831] Test Spark to H2O Conversions on Big Data (#1723)
* [SW-1831] Test Spark to H2O Conversions on Big Data

* Fixes

* Add jenkins files

* Increase number of executors

* More configuration options

* 2 executors

* remove testing dataset

--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -117,6 +117,55 @@ task runBenchmarks(dependsOn: [shadowJar, substituteTerraform, cleanOutput]) {
             environment("aws_access_key", accessKey)
             environment("aws_secret_key", secretKey)
             environment("aws_ssh_public_key", publicKey)
+            environment("datasets", "datasets.json")
+
+            commandLine "./run_benchmarks.sh"
+        }
+    }
+}
+
+task runBigDataSparkToH2OConversionBenchmarks(dependsOn: [shadowJar, substituteTerraform, cleanOutput]) {
+    doLast {
+        exec {
+            def accessKey = project.property("aws_access_key")
+            def secretKey = project.property("aws_secret_key")
+            def publicKey = project.property("aws_ssh_public_key")
+
+            environment("aws_access_key", accessKey)
+            environment("aws_secret_key", secretKey)
+            environment("aws_ssh_public_key", publicKey)
+            environment("aws_instance_type", "m5.4xlarge")
+            environment("aws_core_instance_count", "2")
+            environment("datasets", "bigDatasets.json")
+            environment("other_arguments", "-b DataFrameToH2OFrameConversionBenchmark")
+            environment("aws_emr_timeout", "11 hours") // Must be greater then timeout for proper cleanup
+            environment("timeout", "36000") // 10 hours
+            environment("driver_memory_gb", "8")
+            environment("executor_memory_gb", "20")
+
+            commandLine "./run_benchmarks.sh"
+        }
+    }
+}
+
+task runBigDataH2OtoSparkConversionBenchmarks(dependsOn: [shadowJar, substituteTerraform, cleanOutput]) {
+    doLast {
+        exec {
+            def accessKey = project.property("aws_access_key")
+            def secretKey = project.property("aws_secret_key")
+            def publicKey = project.property("aws_ssh_public_key")
+
+            environment("aws_access_key", accessKey)
+            environment("aws_secret_key", secretKey)
+            environment("aws_ssh_public_key", publicKey)
+            environment("aws_instance_type", "m5.4xlarge")
+            environment("aws_core_instance_count", "2")
+            environment("datasets", "bigDatasets.json")
+            environment("other_arguments", "-b H2OFrameToDataFrameConversionBenchmark")
+            environment("aws_emr_timeout", "11 hours") // Must be greater then timeout for proper cleanup
+            environment("timeout", "36000") // 10 hours
+            environment("driver_memory_gb", "8")
+            environment("executor_memory_gb", "20")
 
             commandLine "./run_benchmarks.sh"
         }
