[SW-1790] RSparkling in cran should be dummy code to point to our rsparkling in custom repo

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,8 @@ ext {
             project(':sparkling-water-py')
     ]
     rProjects = [
-            project(':sparkling-water-r')
+            project(':sparkling-water-r'),
+            project(':sparkling-water-r-cran')
     ]
     docProjects = [
             project(':sparkling-water-doc')
