--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'assembly'
 include 'assembly-h2o'
 include 'py'
 include 'r'
+include 'r-cran'
 include 'repl'
 include 'docker'
 include 'app-streaming'
