--- a/r/src/NAMESPACE
+++ b/r/src/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(h2o_context,spark_connection)
 S3method(h2o_context,spark_jobj)
 export(H2OConf)
+export(H2OContext)
+export(H2OContext.getOrCreate)
 export(as_h2o_frame)
 export(as_spark_dataframe)
 export(h2o_context)
