[SW-1854] Expose Individual Chunks via REST API

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ ext {
             project(':sparkling-water-package'),
             project(":sparkling-water-doc"),
             project(':sparkling-water-utils'),
-            project(':sparkling-water-scoring')
+            project(':sparkling-water-scoring'),
+            project(':sparkling-water-extensions')
     ]
     // Projects with integration tests
     integTestProjects = [
@@ -70,7 +71,8 @@ ext {
             project(':sparkling-water-macros'),
             project(':sparkling-water-utils'),
             project(':sparkling-water-scoring'),
-            project(':sparkling-water-extension-stack-trace')
+            project(':sparkling-water-extension-stack-trace'),
+            project(':sparkling-water-extensions')
 
     ]
     pythonProjects = [
