--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile project(":sparkling-water-repl")
     compile(project(":sparkling-water-core"))
     compile(project(":sparkling-water-extension-stack-trace"))
+    compile(project(":sparkling-water-extensions"))
 
     // Spark libraries
     compile "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
