--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'app-streaming'
 include 'package'
 include 'doc'
 include 'extension-stack-trace'
+include 'extensions'
 include 'templates'
 include 'benchmarks'
 include 'dist'
