[SW-1830] Support h2o3 mojo prediction in rsparkling

--- a/r/src/NAMESPACE
+++ b/r/src/NAMESPACE
@@ -3,6 +3,12 @@
 export(H2OConf)
 export(H2OContext)
 export(H2OContext.getOrCreate)
+export(H2OMOJOModel)
+export(H2OMOJOModel.createFromMojo)
+export(H2OMOJOPipelineModel)
+export(H2OMOJOPipelineModel.createFromMojo)
+export(H2OMOJOSettings)
+export(H2OMOJOSettings.default)
 export(as_h2o_frame)
 export(as_spark_dataframe)
 export(h2o_context)
