[SW-1828][FollowUp] Keep directory structure just on source level, flatten before building as R does not support nested R folders

--- a/r/build.gradle
+++ b/r/build.gradle
@@ -23,6 +23,12 @@ def copyRSetup() {
         filter {
             it.replaceAll("SUBST_SW_VERSION", version)
         }
+        exclude("R")
+    }
+
+    copy {
+        from fileTree("src/R").include("**/*.R").files
+        into file("${project.buildDir}/src/R")
     }
 
     // Copy sparkling water assembly jar
