Rebasing to current master

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,6 +27,8 @@ jar {
 
 dependencies {
     compile project(':sparkling-water-utils')
+    compile project(':sparkling-water-extensions')
+
     compile("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
 
     // Generic model support
