--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'core'
 include 'examples'
 include 'ml'
 include 'assembly'
+include 'assembly-extensions'
 include 'assembly-h2o'
 include 'py'
 include 'r'
