Fix gradle and hadoop command

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -202,4 +202,4 @@ bench {
 }
 
 defineStandardPublication().call()
-shadowJar.dependsOn ":sparkling-water-assembly-extensions:embeddedAssemblyJar"
+build.dependsOn ":sparkling-water-assembly-extensions:embeddedAssemblyJar"
