[SW-1878] Replace H2O_EXTENDED_JAR with H2O_DRIVER_JAR in all cases

--- a/gradle/scala.gradle
+++ b/gradle/scala.gradle
@@ -106,13 +106,15 @@ task checkScalaTestEnv {
     doLast {
 
         // if the spark.ext.h2o.backend.cluster.mode is set to external, then
-        // we need to have also H2O_EXTENDED_JAR property set in order to be able to perform tests
-        if (detectBackendClusterMode() == "external" && System.getenv("H2O_EXTENDED_JAR") == null) {
+        // we need to have also H2O_DRIVER_JAR property set in order to be able to perform tests
+        if (detectBackendClusterMode() == "external" && System.getenv("H2O_DRIVER_JAR") == null) {
 
-            throw new InvalidUserDataException("""When running tests on external H2O cluster, H2O_EXTENDED_JAR property is required.
+            throw new InvalidUserDataException("""When running tests on external H2O cluster, H2O_DRIVER_JAR property is required.
 
-Please set it, for example as:
-export H2O_EXTENDED_JAR=`./gradlew -PdoExtend -q extendJar -PdownloadH2O`
+Download H2O driver for the corresonding hadoop distribution via the shell script ``./bin/get-h2o-driver.sh`` and
+and please set it, for example as:
+
+export H2O_DRIVER_JAR=/path/to/h2o-driver.jar
                                   """)
         }
     }
