--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,6 +12,7 @@ sourceSets {
         }
         resources {
             srcDirs += getSparkSpecificResourceDir(sparkMajorVersion) + ["${projectDir}/flow-css"]
+            srcDirs += "$rootDir/assembly-extensions/build/embedded"
         }
     }
 }
@@ -177,6 +178,7 @@ test.dependsOn testJar
 processResources.dependsOn createSparkVersionFile
 processResources.dependsOn createH2OVersionFile
 processResources.dependsOn createSparklingWaterVersionFile
+processResources.dependsOn ':sparkling-water-assembly-extensions:embeddedAssemblyJar'
 
 integTest {
     // Pass references to libraries to test launcher
