Fix name of extensions assembly

--- a/assembly-extensions/build.gradle
+++ b/assembly-extensions/build.gradle
@@ -17,6 +17,8 @@ jar {
 
 shadowJar {
     mergeServiceFiles()
+
+    archiveBaseName = "${archiveBaseName.get()}_${scalaBaseVersion}"
 }
 
 artifacts {
