--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -3,6 +3,9 @@
 import groovy.json.JsonSlurper
 import org.apache.tools.ant.taskdefs.condition.Os
 
+import java.util.zip.ZipEntry
+import java.util.zip.ZipInputStream
+
 def getOsSpecificCommandLine(args) {
     return isWindowsBased() ? ['cmd', '/c'] + args : ['/usr/bin/env'] + args
 }
@@ -112,6 +115,91 @@ def getS3Path() {
     return path
 }
 
+String downloadH2ODriverJar(outputDir, hadoopVersion, h2oMajorVersion, h2oBuild, h2oMajorName) {
+    def saveDir = file(outputDir)
+    saveDir.mkdirs()
+    def relName = h2oMajorName != "master" ? "rel-${h2oMajorName}" : "master"
+    if (hadoopVersion == "standalone") {
+        def url = "https://s3.amazonaws.com/h2o-release/h2o/${relName}/${h2oBuild}/Rjar/h2o.jar".toURL()
+        def h2oJarFile = new File(saveDir, "h2odriver-${h2oMajorVersion}.${h2oBuild}.jar")
+        if (!h2oJarFile.exists()) {
+            logger.info("Downloading h2o jar from: $url")
+            downloadFile(url, h2oJarFile)
+        }
+        return h2oJarFile.absolutePath
+    } else {
+        def url = "https://s3.amazonaws.com/h2o-release/h2o/${relName}/${h2oBuild}/h2o-${h2oMajorVersion}.${h2oBuild}-${hadoopVersion}.zip".toURL()
+
+        def h2oJarFile = new File(saveDir, "h2odriver-${h2oMajorVersion}.${h2oBuild}-${hadoopVersion}.jar")
+        if (!h2oJarFile.exists()) {
+            def zipEntryName = "h2o-${h2oMajorVersion}.${h2oBuild}-${hadoopVersion}/h2odriver.jar"
+
+            def distributions = getSupportedHadoopDistributions(h2oMajorName, h2oBuild)
+            if (!distributions.contains(hadoopVersion)) {
+                throw new IOException("""
+The hadoop version you have specified is $hadoopVersion, however supported hadoop versions are $distributions
+""")
+            }
+            logger.info("Downloading h2o driver for hadoop version: $hadoopVersion from: $url")
+            downloadFileFromZip(url, h2oJarFile, zipEntryName)
+
+        }
+        return h2oJarFile.absolutePath
+    }
+}
+
+/**
+ * This method expects URL pointing to a zip file and it will save on disk only a file from that zip
+ * with the specified name
+ * @param fromZip url pointing to a zip file
+ * @param to file to which we store the data
+ * @param fullFileName file name in zip file we want to download
+ * @return path to the downloaded file
+ */
+def static downloadFileFromZip(URL fromZip, File to, String fullFileName) {
+    fromZip.withInputStream { is ->
+        ZipInputStream zin = new ZipInputStream(is)
+        ZipEntry ze = zin.getNextEntry()
+        // read the files before we hit the one we are interested in
+        while (ze.getName() != fullFileName) {
+            zin.closeEntry()
+            ze = zin.getNextEntry()
+        }
+        saveFile(zin, to)
+        zin.closeEntry()
+    }
+    return to.absolutePath
+}
+
+/**
+ * Download a file from the provided URL into target file and return path to the downloaded file
+ * @param from url from which download the data
+ * @param to target file
+ * @return path to the downloaded file
+ */
+def static downloadFile(URL from, File to) {
+    from.withInputStream { is ->
+        saveFile(is, to)
+    }
+    return to.absolutePath
+}
+
+/**
+ * Save data in provided input stream to the specified file
+ * @param is input stream with data
+ * @param to file to which store the data
+ * @return path to the file
+ */
+def static saveFile(InputStream is, File to) {
+    to.withOutputStream { os ->
+        def bs = new BufferedOutputStream(os)
+        bs << is
+    }
+    return to.absolutePath
+}
+
+
+
 // Export methods by turning them into closures
 ext {
     getOsSpecificCommandLine = this.&getOsSpecificCommandLine
@@ -122,6 +210,7 @@ ext {
     getGitBranch = this.&getGitBranch
     getH2OBranch = this.&getH2OBranch
     getSupportedHadoopDistributions = this.&getSupportedHadoopDistributions
+    downloadH2ODriverJar = this.&downloadH2ODriverJar
     getSparkSpecificSourceDir = this.&getSparkSpecificSourceDir
     getSparkSpecificResourceDir = this.&getSparkSpecificResourceDir
     getS3Path = this.&getS3Path
