[SW-1875] Ensure method prepareDatasetForFitting works in Rest API based mode

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -175,6 +175,13 @@ task createSparklingWaterVersionFile {
     }
 }
 test.dependsOn testJar
+
+test {
+    if (detectBackendClusterMode() == "internal") {
+        exclude 'ai/h2o/sparkling/FrameRestApiTestSuite.class'
+    }
+}
+
 processResources.dependsOn createSparkVersionFile
 processResources.dependsOn createH2OVersionFile
 processResources.dependsOn createSparklingWaterVersionFile
