--- a/repl/build.gradle
+++ b/repl/build.gradle
@@ -12,6 +12,7 @@ sourceSets {
 
 dependencies {
     // Spark REPL
+    compile project(":sparkling-water-utils")
     compileOnly "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
     testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
 
